{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "88a5c51c-30d8-4a23-9b4e-debaf898969e",
            "actions": [
                {
                    "name": "AddFirstGesture",
                    "type": "Button",
                    "id": "c7756dac-6fbd-4ac0-9044-0fcc6cbaf3c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddSecondGesture",
                    "type": "Button",
                    "id": "5348ec6f-2d60-4181-ad99-430538c4541d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddThirdGesture",
                    "type": "Button",
                    "id": "fb5cb020-a8b9-46fe-a391-2764b2998387",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CastSpell",
                    "type": "Button",
                    "id": "454da351-5048-4707-bbd4-8f07aa205d04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "541c66a6-27e2-42af-8aa1-510809461237",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddFirstGesture",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a840c9b0-f80c-448f-9a84-231416dd8002",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddSecondGesture",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09758304-fb74-4318-af98-8f394ee1502f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddThirdGesture",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ff28626-d912-4878-8909-4aa147e44021",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}